--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "プロジェクト名",
+    "name": "udemy-translate-English-to-Japanese",
     "version": "1.0.0",
     "description": "説明",
     "content_scripts": [
@@ -9,7 +9,7 @@
                 "script/content.js"
             ],
             "matches": [
-                "https://newdaysysjp.udemy.com/*"
+                "https://newdaysysjp.udemy.com/course/*/learn/*"
             ]
         }
     ]
