add: #2 manifest.jsonにbackgroudを使うように追加
* ストレージとメニューのAPIが使えるように修正

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,14 @@
     "name": "udemy-translate-English-to-Japanese",
     "version": "1.0.0",
     "description": "説明",
+    "permissions": [
+        "storage",
+        "contextMenus"
+    ],
+    "background": {
+        "service_worker": "script/backgroundContextMenus.js",
+        "type": "module"
+    },
     "content_scripts": [
         {
             "js": [
