--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
         "contextMenus"
     ],
     "background": {
-        "service_worker": "script/backgroundContextMenus.js",
+        "service_worker": "script/background.js",
         "type": "module"
     },
     "content_scripts": [
