add: #2 キーの命名を変更 * 今だけenableにした場合、ストレージをクリアする

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     "description": "説明",
     "permissions": [
         "storage",
-        "contextMenus"
+        "contextMenus",
+        "management"
     ],
     "background": {
         "service_worker": "script/background.js",
