--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "msedge",
+            "type": "chrome",
             "request": "launch",
             "name": "Lunch My Chrome Extension",
             "url": "https://newdaysysjp.udemy.com/organization/home/",
             "runtimeArgs": ["--load-extension=${workspaceFolder}"],
-            "runtimeExecutable": "C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe",
             //実行前に行うタスク
-            "preLaunchTask": "tsc: build - tsconfig.json"
+            "preLaunchTask": "npm: build"
         }
     ]
 }
