--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,5 +10,13 @@
 			"group": "build",
 			"label": "tsc: build - tsconfig.json"
 		},
+		{
+			"type": "npm",
+			"script": "build",
+			"group": "build",
+			"problemMatcher": [],
+			"label": "npm: build",
+			"detail": "webpack"
+		}
 	]
 }
